[metadata]
name = bcbio-nextgen
author = bcbio community
author_email = biovalidation@googlegroups.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Bio-Informatics
description = Best-practice pipelines for fully automated high throughput sequencing analysis
keywords = chip-seq, dna, genomics, pipeline, rna, rna-seq, sequencing, snp, variant calling
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/bcbio/bcbio-nextgen

[options]
include_package_data = True
packages = find:
python_requires = ==3.6
scripts =
    scripts/bcbio_nextgen.py
    scripts/bcbio_setup_genome.py
    scripts/bcbio_prepare_samples.py
    scripts/bcbio_fastq_umi_prep.py
    scripts/cwltool2wdl.py
zip_safe = False

[options.packages.find]
include = bcbio, bcbio.*
