[metadata]
author = bcbio community
author_email = biovalidation@googlegroups.com
classifiers =
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
description = Best-practice pipelines for fully automated high throughput sequencing analysis
keywords = ChIP-seq, DNA, genomics, pipeline, RNA, RNA-seq, sequencing, SNP, variant calling
license = MIT
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
name = bcbio-nextgen
project_urls =
    Documentation = https://bcbio-nextgen.readthedocs.io/
    Source = https://github.com/bcbio/bcbio-nextgen
    Tracker = https://github.com/bcbio/bcbio-nextgen/issues
url = https://github.com/bcbio/bcbio-nextgen

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
scripts =
    scripts/bcbio_nextgen.py
    scripts/bcbio_setup_genome.py
    scripts/bcbio_prepare_samples.py
    scripts/bcbio_fastq_umi_prep.py
    scripts/cwltool2wdl.py
zip_safe = False

[options.packages.find]
include = bcbio, bcbio.*

[flake8]
max-line-length = 99
